op.txt
time="2026-02-28T15:05:17-08:00" level=warning msg="skipping device /dev/char/10:200 for systemd: stat /sys/dev/char/10:200: no such file or directory"
/home/adkamat/assgn2-adikamat2002
-- CUDA-capable GPU found. GPU architecture: 80
-- Found TBB: /usr/lib/x86_64-linux-gnu/cmake/TBB (found version "2021.5.0")
-- Configuring done
-- Generating done
-- Build files have been written to: /home/adkamat/assgn2-adikamat2002/build
Consolidate compiler generated dependencies of target compare_alignment
Consolidate compiler generated dependencies of target check_alignment
Consolidate compiler generated dependencies of target aligner
[ 50%] Built target check_alignment
[ 62%] Built target compare_alignment
[ 62%] Building CUDA object CMakeFiles/aligner.dir/src/alignment.cu.o
/home/adkamat/assgn2-adikamat2002/src/alignment.cu(301): error: type name is not allowed
                          score= int16_t __vimax3_s32(score_diag, score_up, score_left);
                                 ^

/home/adkamat/assgn2-adikamat2002/src/alignment.cu(301): error: expected a ";"
                          score= int16_t __vimax3_s32(score_diag, score_up, score_left);
                                         ^

2 errors detected in the compilation of "/home/adkamat/assgn2-adikamat2002/src/alignment.cu".
make[2]: *** [CMakeFiles/aligner.dir/build.make:90: CMakeFiles/aligner.dir/src/alignment.cu.o] Error 2
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/aligner.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
========= COMPUTE-SANITIZER
Setting CPU threads to 4 and printing GPU device properties.
Device Number: 0
  Device name: NVIDIA A30 MIG 2g.12gb
  Device memory: 12549357568
  Memory Clock Rate (KHz): 1215000
  Memory Bus Width (bits): 1536
  Peak Memory Bandwidth (GB/s): 466.560000

Program completed in 21755 ms

========= ERROR SUMMARY: 0 errors
[SUCCESS] All 10000 aligned sequences match their raw originals.

Valid Comparisons: 5000 pairs. Average Percentage Score Loss: 0.192668%

